# hashids_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: lib.rs  main.rs
tests/: javascript_hashids.js  lib.rs
