[package]

name = "hashids"
version = "1.0.0"
authors = [ "charsyam <charsyam@gmail.com>" ]
description = "HashIds Rust Implementation"
repository = "https://github.com/charsyam/hashids_rust"
keywords = ["rust", "hashids"]
license = "MIT"

include = [
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
failure = "0.1"
regex = "0.1"
